Bug 475907 - Pressing enter a second time when doing a calculation clears the screen.
Summary: Pressing enter a second time when doing a calculation clears the screen.
Status: RESOLVED FIXED
Alias: None
Product: Kalk
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: hanyoung
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-21 05:05 UTC by Justin Zobel
Modified: 2023-10-21 06:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2023-10-21 05:05:47 UTC
SUMMARY
Pressing equals a second time when doing a calculation clears the screen.

STEPS TO REPRODUCE
1. Do a calculation
2. Press = twice
3. The calculation is cleared

OBSERVED RESULT
The calculations are cleared

EXPECTED RESULT
The calculations aren't cleared

Kalk 23.08.1 on postmarketOS (Frameworks 5.110.0)
Comment 1 hanyoung 2023-10-21 06:22:46 UTC
Git commit 662aa91d58160fca8538f01d7a35253d351214c4 by Han Young.
Committed on 21/10/2023 at 08:22.
Pushed by hanyoung into branch 'master'.

don't clear the input if user press equal twice

M  +4    -0    src/inputmanager.cpp

https://invent.kde.org/utilities/kalk/-/commit/662aa91d58160fca8538f01d7a35253d351214c4