don't clear the input if user press equal twice

BUG: 475907